Refactor footer and header components; update subNavBar styles and functionality; enhance cart and product detail pages with improved UI/UX; optimize CSS for responsiveness and aesthetics; remove unused JavaScript file; implement dynamic cart item handling and notifications.

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,7 +4,7 @@
             <a href="/" class="brand-logo">
                 <img src="/assets/Layout/Brand/logo-colored.png" alt="Brand Logo">
             </a>
-            <p>Best information about the company goes here but now lorem ipsum is</p>
+            <p class="base-color">Best information about the company goes here but now lorem ipsum is</p>
             <ul class="social-links">
                 <li><a href="#" aria-label="Facebook"><img src="/assets/icons/SVG/contact/facebook.svg" alt="" width="30px"></a></li>
                 <li><a href="#" aria-label="Twitter"><img src="/assets/icons/SVG/contact/x.svg" alt="" width="30px"></a></li>
