--- a/components/header.html
+++ b/components/header.html
@@ -39,7 +39,7 @@
             <a href="/pages/cart.html">
               <img src="/assets/icons/cart.png" alt="cart icon" class="">
             </a>
-            <span>My Cart</span>
+            <span>Cart</span>
           </li>
         </ul>
       </nav>
