--- a/components/subNavBar.html
+++ b/components/subNavBar.html
@@ -3,42 +3,41 @@
         
         <ul class="sub-nav-links left-nav normal-text">
             <li>
-                <a href="#" class="category-trigger">
-                    <img src="/assets/icons/hamburger.png" alt="manu icon" width="20px">
-                    <span>All category</span>
+              <a href="#" class="category-trigger">
+                  <img src="/assets/icons/hamburger.png" alt="manu icon" width="15px">
+                    <span class="font4">All category</span>
                 </a>
             </li>
-            <li><a href="#">Hot offers</a></li>
-            <li><a href="#">Gift boxes</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Menu item</a></li>
-            <li>
-               <select name="help" id="help">
+            <li><a href="#" class="font4">Hot offers</a></li>
+            <li><a href="#" class="font4">Gift boxes</a></li>
+            <li><a href="#" class="font4">Projects</a></li>
+            <li><a href="#" class="font4">Menu item</a></li>
+            <li class="font4 help-menu">
+               <select name="help" id="help" class="font4">
                     <option value="help">Help</option>
                     <option value="track-order">Track Order</option>
                     <option value="returns">Returns</option>
                     <option value="shipping">Shipping</option>
                     <option value="faqs">FAQs</option>
-                    <!-- <img src="assets/Layout/Form/input-group/Icon/control/Vector.png" alt="dropdown down icon"> -->
-               </select>
+                  </select>
+                  <img src="/assets/Layout/Form/input-group/Icon/control/Vector.png" alt="" class="help-icon">
             </li>
         </ul>
         <ul class="nav-links right-nav">
           <li>
-            <select name="language" id="language">
+            <select name="language" id="language"  class="font4">
               <option value="english">English, USD</option>
               <option value="spanish">Spanish, EUR</option>
               <option value="french">French, EUR</option>
             </select>
           </li>
           <li>
-            <select name="ship-to" id="ship-to">
-              ship-to
+            <select name="ship-to" id="ship-to" class="font4">
               <option value="usa">
-                Ship to 
+                Ship to USA
               </option>
-              <option value="uk"></option>
-              <option value="germany"></option>
+              <option value="uk"> Ship to UK</option>
+              <option value="germany"> Ship to Germany  </option>
             </select>
           </li>
         </ul>
